bug: fixed readability of fact cards

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -96,13 +96,19 @@ header {
   height: 100%;
   text-align: center;
   border-radius: 5px;
-  transition: transform 0.8s;
+  transition: transform 0.8s,
+              background-color 2s ease-out;
   transform-style: preserve-3d;
 }
 
 /* Do an horizontal flip when you move the mouse over the flip box container */
 .flip-card:hover .flip-card-inner {
   transform: rotateY(180deg);
+  background-color: #fff;
+}
+
+.flip-card:hover .flip-card-front{
+  display:none;
 }
 
 /* Position the front and back side */
@@ -127,6 +133,8 @@ header {
   border-radius: 5px;
   color: var(--black);
   transform: rotateY(180deg);
+
+  
 }
 
 /* Home page */
@@ -310,5 +318,10 @@ header {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+@keyframes factfade {
+  from {display:block}
+  to {display:none}
 }
 
